--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tiptap/core": "^2.0.0-beta.41",
+    "@tiptap/starter-kit": "^2.0.0-beta.37",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vueditor": "^0.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
