--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "vueditor": "^0.3.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {},
   "scripts": {
