--- a/client/package.json
+++ b/client/package.json
@@ -40,8 +40,7 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {
-    }
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
